k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: chatapp
  labels:
    name: chatapp
