k8s/dbdep.yml
kind: Deployment 
apiVersion: apps/v1
metadata:
  name: mongo
  namespace: chatapp
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        volumeMounts:
        - name: mongo-data
          mountPath: /home/tnxq/mongo-data
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 30
          periodSeconds: 20
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
