k8s/dbsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: chatapp
spec: 
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  type: ClusterIP
